Adding new graphs for bandwiths and tcp variables

--- a/lab/4-5/report/report.tex
+++ b/lab/4-5/report/report.tex
@@ -73,6 +73,12 @@ sorting=ynt
 
 \end{abstract}
 
+\iffalse
+General todos:
+- [ ] annotate trace with events from congestion control implementation
+- [ ] packet loss detection (draw something red when a packet loss is detected)
+   - 
+\fi
 \clearpage
 
 \setcounter{page}{1}
