--- a/lab/4-5/report/report.tex
+++ b/lab/4-5/report/report.tex
@@ -17,6 +17,7 @@ style=ieee,
 sorting=ynt
 ]{biblatex}
 
+
 \addbibresource{references.bib}
  
 \usepackage{xcolor}
@@ -72,12 +73,11 @@ sorting=ynt
 \thispagestyle{empty}
 
 \begin{abstract}           
-
+   test
    - state machine comparison with the RFC[] one manually setting differnet latencies (differences on the final sequence)
    - analysis of the flow-control and congestion control mechanisms, plotting graphs with the congestion window, and analysing how the tcp state variable change in time.
    - behaviour of auto-resizing sockets buffer
    - the connection between Latency, RTT and bandwidth
-
 
 \end{abstract}
 
@@ -97,6 +97,8 @@ General todos:
 - [ ] Does linear increase in latency mean linear decrease in bandwidth? How does socket-buffer auto-resizing help/hurt/not change performance?
 - [ ] Explore the effects of socket-buffer limits and stack graph information on the flow-control versus congestion-control limits. How does socket-buffer auto-resizing help/hurt/not change performance? 
 - [ ] describe probe effect, if any?
+- [ ] dtrace precision problem; There are many timestamps that are the same:v (put this in limitations)
+- [ ] probe effect
 \fi
 
 \clearpage
@@ -129,7 +131,7 @@ The board mounts an SD card. However, it is not relevant for the test, as the be
 
 The benchmark consists of a program able to create two ends of a TCP socket over the loopback interface. The program is statically linked, so we can neglet dynamic linking performance overhead. The program opens a socket using the \codeword{socket(2)} system call, bind it to a specifc port, and listen for new connections. The receiving end similarly opens a socket, and uses \codeword{connect(2)} to connect with the other endpoint at the same port. During the benchmark, a fixed size amount of data is transferred from the sender to the receiver. Afterwards, the \codeword{close(2)} system call initiate the closing phase.
 
-IPFW\cite{IPFW}, the firewall used, provides DUMMYNET, that allows to shape the traffic. In this experiment, IPFW is used to generate two pipes, and sent the latency in each one of those. The pipes are used to filter the traffic, and selectively apply the delay only to the traffic we care abot. We then generate the state transition graph at different levels of delays, to see the differences.
+IPFW, the firewall used, provides DUMMYNET\cite{luigirizzo_luigirizzodummynet_2020}, that allows to shape the traffic. In this experiment, IPFW is used to generate two pipes, and sent the latency in each one of those. The pipes are used to filter the traffic, and selectively apply the delay only to the traffic we care abot. We then generate the state transition graph at different levels of delays, to see the differences.
 The actors of the communication, in our case, are two threads: one that sends data, and the other that receives it. The dimension of the buffer passed to the \codeword{write(2)} system call are 128KB for the state-machine generation, and 1MB for the remaining graphs.
 The total amount of data transferred is 16MB for each benchmark run.
 
@@ -185,7 +187,7 @@ During the tracing, several other processes were running, and this might have in
    \centering
    \includegraphics[width=\textwidth]{images/RFC_Graph.png}
     \caption{TCP state transition according to RFC 793.}
-    \label{fig:40ms_latency}
+    \label{fig:RFC_graph}
 \end{subfigure}
 \caption[short]{Comparison between measured state transitions and RFC 793.}
 \end{figure}
@@ -196,7 +198,7 @@ We generated TCP state transition graphs with different latency values, from 0ms
    \item From a latency of 10ms onwards, as shown in figure \ref{fig:40ms_latency}, both the server and the client reach the \codeword{fin-wait-1} state, but then they both enter into the closing state, without passing through the \codeword{fin-wait-2} state.
 \end{itemize}
 
-This behaviour is clearly explained in the RFC 793\cite{RFC_793} at page 42. In the former case, it happens that the server sends the close packet (with the \codeword{FIN}), then the client receives it before closing the connection itself.
+This behaviour is clearly explained in the RFC 793\cite{postel_transmission_nodate} at page 42. In the former case, it happens that the server sends the close packet (with the \codeword{FIN}), then the client receives it before closing the connection itself.
 In the latter case we have that due to the delay, the connection is closed simultaneously by both actors. None of them will receive the other FIN before sending its own FIN. For this reason, they both switch to fin-wait-1. When they receive each other FIN, they switch to closing, and after having received the ACK of the FIN, they go to the time-wait state.
 
 There is another small difference between the generated graph and the RFC one. The server, does not transition from listen to \codeword{syn-received}, but from closed to \codeword{syn-receive}. In the RFC graph there are other transitions not performed during the benchmark, related to cases such as the closing of a connection before the proper enstablishment.
@@ -208,12 +210,12 @@ There is another small difference between the generated graph and the RFC one. T
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=11cm]{images/tcp_bandwidth.png}
+\includegraphics[width=\textwidth]{images/tcp_bandwidth.png}
   \caption{Imposed DUMMYNET lantecy vs bandwidth, both with and without socket-buffer auto-resizing}
    \label{fig:bandwidth}
 \end{figure}
 
-Figure\ref{fig:bandwidth} shows the bandwidth versus the DUMMYNET-imposed latency. We can notice that the bandwidth decrease is not linear. It remains almost constant until a latency of 5ms, when if suddently drops at 10ms. At 20ms, it halves again, to then stay stationary from 30ms onwards.
+Figure \ref{fig:bandwidth} shows the bandwidth versus the DUMMYNET-imposed latency. We can notice that the bandwidth decrease is not linear. It remains almost constant until a latency of 5ms, when if suddently drops at 10ms. At 20ms, it halves again, to then stay stationary from 30ms onwards.
 The socket-buffer autoresizing does not always result in a performance increase. We can notice two phases:
 \begin{itemize}
    \item With low latencies, until 5ms, the auto-resizing policy allows an higher bandwidth.
@@ -226,14 +228,17 @@ There can be multiple reason for this trend. An increased latency limits the con
 
 \subsection{Time-bandwidth graph}
 
-For the following graphs, the latency has been manually set to 5 ms
+\iffalse 
 Notes:
 - with manual socket it seems faster: it finishes in 2.7 instead of 3.4
 - for the congestion window, initial values are trimmed out
+\fi
+
 \subsection{Probe effect}
 
 \section{Conclusions}
 
+Some conclusions
 \newpage
 
 \section{References}
