--- a/lab/4-5/report/report.tex
+++ b/lab/4-5/report/report.tex
@@ -73,32 +73,57 @@ sorting=ynt
 \thispagestyle{empty}
 
 \begin{abstract}           
-   test
-   - state machine comparison with the RFC[] one manually setting differnet latencies (differences on the final sequence)
+   This experiment is about an investigation of the TCP protocol, and its
+   implementation in the FreeBSD operating system. Firstly, we compare the state machine described
+   in the TCP specifications (RFC ???) with the actual one in FreeBSD. Thanks
+   to DUMMYNET, it is possible to witness and compare the behaviour of the
+   stack with different network latencies. Secondly, we investigate the effect
+   of latency on effective bandwidth across time, analysing how the various
+   congestion control techniques behave. Particular attention is put into the
+   comparison of fixed socket buffers versus automatic buffer resizing.
+
+   As a result, it is highlighted the connection between Latency, RTT (Round-Trip time) and bandwidth. 
+   Setting the size of socket buffers will avoid expensive resizing on the way to the final bandwidth, resulting in the reach of mean bandwith in a faster way.
+%todo include conclusions, and results
+
+
+ 
+\end{abstract}
+
+\iffalse
+- state machine comparison with the RFC[] one manually setting differnet latencies (differences on the final sequence)
    - analysis of the flow-control and congestion control mechanisms, plotting graphs with the congestion window, and analysing how the tcp state variable change in time.
    - behaviour of auto-resizing sockets buffer
    - the connection between Latency, RTT and bandwidth
 
-\end{abstract}
-
-\iffalse
 - [0,5,10,20,40] ms available
 General todos:
 - (-s = not automatic, but set)
+
+generic things to write
 - [ ] write that the window advertisement is the space available in the receiver buffer.
 - [ ] receive window comparison
+- [ ] define RTT (and understand what it is)
 - [ ] write that the cwnd is calculated on duplicate ACKs
+
+generic things to do 
+- [ ] read chapter about TCP (chp. 14)
 - [ ] annotate trace with events from congestion control implementation
 - [ ] packet loss detection (draw something red when a packet loss is detected)
 - [ ] Mark when  the different tcp phases begin (slowstart, congestion avoidance, fast recovery?)
-- [ ] compare flow-control and congestion limit, showing when each is limiting.
 - [ ] understand if packet len is useful
+- [ ] probe effect
+- [ ] add an indication for each duplicate ack in the graphs (packet loss)
+- [ ] mark start of congestion avoidance
+
+generic things to investigate
+- [ ] find out the reason for the different initial increase
+- [ ] compare flow-control and congestion limit, showing when each is limiting.
 - [ ] write about the dtrace buffer limitation
 - [ ] Does linear increase in latency mean linear decrease in bandwidth? How does socket-buffer auto-resizing help/hurt/not change performance?
 - [ ] Explore the effects of socket-buffer limits and stack graph information on the flow-control versus congestion-control limits. How does socket-buffer auto-resizing help/hurt/not change performance? 
 - [ ] describe probe effect, if any?
 - [ ] dtrace precision problem; There are many timestamps that are the same:v (put this in limitations)
-- [ ] probe effect
 \fi
 
 \clearpage
@@ -107,6 +132,37 @@ General todos:
 
 \section{Introduction}
 
+The Transmission Control Protocol (TCP)
+
+- tcp connections as state machines
+\subsection{Congestion control}
+The tcp congestion control takes into account two different factors: 
+\begin{enumerate}
+   \item The receiver available space. Each receiver operates with a finite
+      amount of space to accomodate the data received. If this space ends, the
+      receiver has to drop new packets. For this reason, in every ACK packet
+      the receiver inserts and advertised window size, based on the amount of
+      space in the receive socket buffer. this variable will be called
+      'Advertised window' from now on. Its name in the FreeBSD implementation
+      is \codeword{snd_wnd}.  
+   \item The network effective capacity. Every network link has a finite
+      capacity. Trying to transmit more data than the network infrastructure
+      can handle would result in packets loss. When the receiver has a gap in
+      the sequence numers (caused by a packet loss), it will send a duplicate
+      ACK to hints the sender the the packet should be retransmitted. This
+      influences the value of the congestion window.  This variable will be
+      called 'Congestion window', and is kept as a state variable on each side
+      of the TCP connection. Its name in the FreeBSD implementation is
+      \codeword{snd_cwnd}, and it is changed according to three different
+      phases (even if all the implementations might slighly differ).
+\end{enumerate}
+The congestion window change is handled in three different phases, well described in the RFC 5681\ref{RFC_5681}:
+\begin{itemize}
+   \item Slow start
+   \item Congestion avoidance
+   \item Fast recovery
+\end{itemize}
+The effective bandwidth is then set based on the minimum between the receiver available buffer size, and the congestion window.
 
 \section{Experimental setup and methodology}
 
@@ -166,24 +222,23 @@ During the tracing, several other processes were running, and this might have in
 \section{Results and discussion}
 
 \subsection{TCP state-transition diagram}
-% todo insert diagram image and RFC image
-%overall figure
+%overall figures
 \begin{figure}[]
-\begin{subfigure}{.25\textwidth}
+\begin{subfigure}{.30\textwidth}
     \centering
     \includegraphics[width=\textwidth]{images/TCP_state_machine_0_ms.png}
     \caption{TCP state transition graph with 0ms latency.}
     \label{fig:0ms_latency}
 \end{subfigure}%
 \qquad
-\begin{subfigure}{.25\textwidth}
+\begin{subfigure}{.30\textwidth}
    \centering
    \includegraphics[width=\textwidth]{images/TCP_state_machine_40_ms.png}
     \caption{TCP state transition graph with 40ms latency.}
     \label{fig:40ms_latency}
 \end{subfigure}
 \qquad
-\begin{subfigure}{.25\textwidth}
+\begin{subfigure}{.30\textwidth}
    \centering
    \includegraphics[width=\textwidth]{images/RFC_Graph.png}
     \caption{TCP state transition according to RFC 793.}
@@ -216,23 +271,52 @@ There is another small difference between the generated graph and the RFC one. T
 \end{figure}
 
 Figure \ref{fig:bandwidth} shows the bandwidth versus the DUMMYNET-imposed latency. We can notice that the bandwidth decrease is not linear. It remains almost constant until a latency of 5ms, when if suddently drops at 10ms. At 20ms, it halves again, to then stay stationary from 30ms onwards.
-The socket-buffer autoresizing does not always result in a performance increase. We can notice two phases:
+The socket-buffer autoresizing does not always result in a performance increase. We can notice different phases:
 \begin{itemize}
-   \item With low latencies, until 5ms, the auto-resizing policy allows an higher bandwidth.
-   \item From 10ms to 25ms, the benchmark without autoresizing is always slighly faster than the statically sized one, but comparable.
-   \item From 30ms onwards the statically sized one allows a bandwidth more than double the autosized one. %todo find the reson!
+   \item With low latencies, until 5ms, the auto-resizing policy allows an higher bandwidth . %todo actually, not?
+   \item From a latecy of 10ms the overall bandwidth drops steadily. From 10ms to 25ms, the benchmark with statically sized buffers is always slighly faster than the other one, but comparable.
+   \item From 30ms onwards the statically sized one allows a bandwidth more than double the autosized one. %todo because slow start doesn't gor as fast as the other
 \end{itemize}
 
-There can be multiple reason for this trend. An increased latency limits the congestion window grow, and as a consequence the overall bandwidth, because the "final" transfer rate will be reached more slowly.
-% todo write more here!
+There can be multiple reasons for this trend. 
+An increased latency limits the congestion window grow rate, and as a consequence the overall bandwidth, because the final transfer rate will be reached more slowly. In our case, we are exchanging only 16 MB of data. As we will see in the following section, at some latency TCP is barely able to exit from the slow start phase, so it did not already find the full bandwidth available.
 
 \subsection{Time-bandwidth graph}
 
-\iffalse 
-Notes:
-- with manual socket it seems faster: it finishes in 2.7 instead of 3.4
-- for the congestion window, initial values are trimmed out
-\fi
+\begin{figure}[]
+\begin{subfigure}{\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{images/10_wnd_comparison.png}
+    \caption{Receiver available space sent trough ACK across time.}
+    \label{fig:10ms_wnd}
+\end{subfigure}%
+\qquad
+\begin{subfigure}{\textwidth}
+   \centering
+   \includegraphics[width=\textwidth]{images/10_cwnd_comparison.png}
+    \caption{TCP congestion window across time.}
+    \label{fig:10ms_cwnd}
+\end{subfigure}
+\qquad
+\begin{subfigure}{\textwidth}
+   \centering
+   \includegraphics[width=\textwidth]{images/10_snd_ssthresh_comparison.png}
+    \caption{TCP state transition according to RFC 793.}
+    \label{fig:10ms_sshth}
+\end{subfigure}
+\caption[short]{TCP variables comparison during 10 ms latency transfer}
+\label{fig:tcp_variables}
+\end{figure}
+
+Figure \ref{fig:tcp_variables} compares the various TCP variables in the case of autoresizing and fixed buffers. Those graphs can help to understand the differences in the bandwidth achieved at the various latencies. 
+
+Figure \ref{fig:10ms_wnd} shows the advertised available buffer size in the receiver. From the comparison between the two buffer sizing policies, it is clear that the fixed size one oversizes the buffer. Even if it gets filled, the bandwidth never allows to have more than half of it to be occupied. During the initial slow start phase it can be seen how the buffer gets filled fastly. Afterwards, the available space always remains above 8 MB. However, as effect of the bandwidth increase with time, it is possible to see how the buffer gets filled more at every period from 0.6 seconds afterwards. As a consequence of the oversizing, the available space is never a limiting factor for the connection speed in this instance. 
+On the other side, the automatically resized one has a more cautious approach: the initial buffer sizes seems to increase with time. An available receiving buffer size near to 0 is often reached. After each one of those events, the buffer size seems to slighly increase. Up until 1.8s the receiver buffer size might have been a limiting factor for the overall bandwidth. 
+
+Figure \ref{fig:10ms_cwnd} shows the congestion window progress over time. In the slow start phase two different progression strategies are adopted based on the buffer resizing policy. For fixed size buffers, the congestion window increase is exponential, with a doubling at each step until a packet loss is witnessed. On the other hand, with an automatic resizing policy, the congestion window has a more linear increase, that takes more time to reach a packet loss. Once this happens, a new exponential increase is entered, until ...? % todo it seems that afterwards it grows exponentially?
+In both cases, when the slow start treshold is met, it is possible to see the linear growth of the congestion avoidance phase, where the congestion window is slowly increaced by one segment every RTT.
+
+%todo for the ssthresh I have to understand what it is
 
 \subsection{Probe effect}
 
@@ -248,4 +332,4 @@ Some conclusions
 \section{Appendices}
 
 
-\end{document}
+\end{document}
