--- a/lab/4-5/report/report.tex
+++ b/lab/4-5/report/report.tex
@@ -83,7 +83,7 @@ sorting=ynt
    comparison of fixed socket buffers versus automatic buffer resizing.
 
    As a result, it is highlighted the connection between Latency, RTT (Round-Trip time) and bandwidth. 
-   Setting the size of socket buffers will avoid expensive resizing on the way to the final bandwidth, resulting in the reach of mean bandwith in a faster way.
+   Setting the size of socket buffers will avoid expensive resizing on the way to the final bandwidth, resulting in the reach of mean bandwith in a faster way. An automatic socket buffer resizing policy makes the initial slow start phase slower. Since the congestion window is limited by the receiver available buffer size, the increase is not exponential anymore, and depends by the effective resizing policy. In FreeBSD, the buffer % todo find the code with the actual policy.
 %todo include conclusions, and results
 
 
@@ -105,7 +105,7 @@ generic things to write
 - [ ] receive window comparison
 - [ ] define RTT (and understand what it is)
 - [ ] write that the cwnd is calculated on duplicate ACKs
-
+- [ ] sshthreshould trimmed at the beginning
 generic things to do 
 - [ ] read chapter about TCP (chp. 14)
 - [ ] annotate trace with events from congestion control implementation
@@ -158,7 +158,7 @@ The tcp congestion control takes into account two different factors:
 \end{enumerate}
 The congestion window change is handled in three different phases, well described in the RFC 5681\ref{RFC_5681}:
 \begin{itemize}
-   \item Slow start
+   \item Slow start. In this phase, the congestion window is increased by one MSS for each acknowledgement received. This results in an exponential increase.
    \item Congestion avoidance
    \item Fast recovery
 \end{itemize}
@@ -261,27 +261,8 @@ There is another small difference between the generated graph and the RFC one. T
 % todo probe effect? in this case not relevant I think, but how to mseasure it? probably overall time at each delay level?
 
 
-\subsection{Bandwidth for each imposed latency}
+\subsection{TCP variables across time}
 
-\begin{figure}[h]
-\centering
-\includegraphics[width=\textwidth]{images/tcp_bandwidth.png}
-  \caption{Imposed DUMMYNET lantecy vs bandwidth, both with and without socket-buffer auto-resizing}
-   \label{fig:bandwidth}
-\end{figure}
-
-Figure \ref{fig:bandwidth} shows the bandwidth versus the DUMMYNET-imposed latency. We can notice that the bandwidth decrease is not linear. It remains almost constant until a latency of 5ms, when if suddently drops at 10ms. At 20ms, it halves again, to then stay stationary from 30ms onwards.
-The socket-buffer autoresizing does not always result in a performance increase. We can notice different phases:
-\begin{itemize}
-   \item With low latencies, until 5ms, the auto-resizing policy allows an higher bandwidth . %todo actually, not?
-   \item From a latecy of 10ms the overall bandwidth drops steadily. From 10ms to 25ms, the benchmark with statically sized buffers is always slighly faster than the other one, but comparable.
-   \item From 30ms onwards the statically sized one allows a bandwidth more than double the autosized one. %todo because slow start doesn't gor as fast as the other
-\end{itemize}
-
-There can be multiple reasons for this trend. 
-An increased latency limits the congestion window grow rate, and as a consequence the overall bandwidth, because the final transfer rate will be reached more slowly. In our case, we are exchanging only 16 MB of data. As we will see in the following section, at some latency TCP is barely able to exit from the slow start phase, so it did not already find the full bandwidth available.
-
-\subsection{Time-bandwidth graph}
 
 \begin{figure}[]
 \begin{subfigure}{\textwidth}
@@ -298,25 +279,59 @@ An increased latency limits the congestion window grow rate, and as a consequenc
     \label{fig:10ms_cwnd}
 \end{subfigure}
 \qquad
-\begin{subfigure}{\textwidth}
+\begin{subfigure}{0.5\textwidth}
    \centering
-   \includegraphics[width=\textwidth]{images/10_snd_ssthresh_comparison.png}
-    \caption{TCP state transition according to RFC 793.}
-    \label{fig:10ms_sshth}
+   \includegraphics[width=\textwidth]{images/10_detail_windows_fixed.png}
+   \caption{TCP congestion windows for fixed size buffers.}
+    \label{fig:10ms_fixed}
 \end{subfigure}
+\qquad
+\begin{subfigure}{0.5\textwidth}
+   \centering
+   \includegraphics[width=\textwidth]{images/10_detail_windows_auto.png}
+    \caption{TCP congestion windows for automatic resizing buffer.}
+    \label{fig:10ms_auto}
+\end{subfigure}
+
 \caption[short]{TCP variables comparison during 10 ms latency transfer}
 \label{fig:tcp_variables}
 \end{figure}
 
-Figure \ref{fig:tcp_variables} compares the various TCP variables in the case of autoresizing and fixed buffers. Those graphs can help to understand the differences in the bandwidth achieved at the various latencies. 
+Figure \ref{fig:tcp_variables} compares the various TCP variables in the case of autoresizing and fixed buffers. Those graphs can help to understand the differences in the bandwidth achieved at the various latencies, displayed in figure \ref{fig:bandwidth}. 
 
 Figure \ref{fig:10ms_wnd} shows the advertised available buffer size in the receiver. From the comparison between the two buffer sizing policies, it is clear that the fixed size one oversizes the buffer. Even if it gets filled, the bandwidth never allows to have more than half of it to be occupied. During the initial slow start phase it can be seen how the buffer gets filled fastly. Afterwards, the available space always remains above 8 MB. However, as effect of the bandwidth increase with time, it is possible to see how the buffer gets filled more at every period from 0.6 seconds afterwards. As a consequence of the oversizing, the available space is never a limiting factor for the connection speed in this instance. 
 On the other side, the automatically resized one has a more cautious approach: the initial buffer sizes seems to increase with time. An available receiving buffer size near to 0 is often reached. After each one of those events, the buffer size seems to slighly increase. Up until 1.8s the receiver buffer size might have been a limiting factor for the overall bandwidth. 
 
-Figure \ref{fig:10ms_cwnd} shows the congestion window progress over time. In the slow start phase two different progression strategies are adopted based on the buffer resizing policy. For fixed size buffers, the congestion window increase is exponential, with a doubling at each step until a packet loss is witnessed. On the other hand, with an automatic resizing policy, the congestion window has a more linear increase, that takes more time to reach a packet loss. Once this happens, a new exponential increase is entered, until ...? % todo it seems that afterwards it grows exponentially?
+Figure \ref{fig:10ms_cwnd} shows the congestion window progress over time. In the slow start phase two different progression strategies are adopted based on the buffer resizing policy. For fixed size buffers, the congestion window increase is exponential, with a doubling at each step until a packet loss is witnessed. On the other hand, with an automatic resizing policy, the congestion window has a more linear increase, that takes more time to reach a packet loss. Once this happens, a new exponential increase is entered, until the slow start threshold is reached.
 In both cases, when the slow start treshold is met, it is possible to see the linear growth of the congestion avoidance phase, where the congestion window is slowly increaced by one segment every RTT.
 
-%todo for the ssthresh I have to understand what it is
+In figues \ref{fig:10ms_auto} and \ref{fig:10ms_fixed} we can compare what happens before and after the loss of a packet, and explain the reason why the increase in exponential in the fixed sized case, and almost linear in the automatic buffer resizing case. 
+The packet losses have been identified by an ACK received three times from the sender. 
+Regarding the automatically sized buffer case, figure \ref{fig:10ms_auto}, it is possible to notice that the limiting factor before the packet loss was the receiver available size. The congestion window never increases above the receiver maximum available buffer size. After the packet loss (identified by the red dot), the slow start threshold is lowered to half the congestion window (in green in the graph). The initial part of the slow start threshold (before the packet loss), is not displayed in the graph, and can be considerate arbitrarily high. However, soon after (at second 1.8) the receiver buffer returns to limit its increase (for the last time). Afterwards, the receiver buffer is not a limiting factor anymore, so the congestion window can proceed with the exponential growth.
+An explanation of the extremely high growth in figure \ref{fig:10ms_auto} between the two packet loss is that an high number of acknowledgements have been received in a short amount of time: each one of them increased the congestion window by one MSS.
+
+\subsection{Bandwidth for each imposed latency}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=\textwidth]{images/tcp_bandwidth.png}
+  \caption{Imposed DUMMYNET lantecy vs bandwidth, both with and without socket-buffer auto-resizing}
+   \label{fig:bandwidth}
+\end{figure}
+
+Figure \ref{fig:bandwidth} shows the bandwidth versus the DUMMYNET-imposed latency. We can notice that the bandwidth decrease is not linear. It remains almost constant until a latency of 5ms, when if suddently drops at 10ms. At 20ms, it halves again, to then stay stationary from 30ms onwards.
+The socket-buffer autoresizing does not always result in a performance increase. We can notice different phases:
+\begin{itemize}
+   \item With low latencies, until 5ms, the auto-resizing policy allows an higher bandwidth. However, at 5ms we can notice an high variability in the values gathered with an automatic resizing policy.  With a latency of 0ms %todo actually, not? 
+      
+   \item From a latecy of 10ms the overall bandwidth drops steadily. From 10ms to 25ms, the benchmark with statically sized buffers is always slighly faster than the other one, but comparable.
+   \item From 30ms onwards the statically sized one allows a bandwidth more than double the autosized one. %todo because slow start doesn't gor as fast as the other
+\end{itemize}
+
+There can be multiple reasons for this trend. 
+An increased latency limits the congestion window grow rate, and as a consequence the overall bandwidth, because the final transfer rate will be reached more slowly. In our case, we are exchanging only 16 MB of data. As we will see in the following section, at some latency TCP is barely able to exit from the slow start phase, so it did not already find the full bandwidth available.
+
+
 
 \subsection{Probe effect}
 
